# session_crypto

./: .env.example  .gitignore  README.md  SESSION_INIT_MIGRATION_PLAN.md  benchmark.sh  docker-compose.yml  session-init-design.md  session_crypto.sln
client/angular-spa/: README.md  angular.json  package-lock.json  package.json
client/angular-spa/src/: main.single-spa.ts  styles.css
client/angular-spa/src/app/: app.component.ts
client/angular-spa/src/app/services/: crypto.service.ts  session.service.ts
client/dotnet/SessionCryptoClient/: Program.cs
client/go/: go.mod  main.go
client/java-virtual-threads/: build.gradle.kts  pom.xml  run.sh  settings.gradle.kts
client/java-virtual-threads/src/main/java/com/example/: SessionCryptoClient.java
client/java-webflux/: pom.xml  run.sh
client/java-webflux/src/main/java/com/example/: SessionCryptoClient.java
client/node/: package-lock.json  package.json
client/node/src/: crypto-helpers.ts  index.ts  negative-tests.ts
client/react-spa/: package-lock.json  package.json
client/react-spa/src/: App.css  App.tsx  main.single-spa.tsx
client/react-spa/src/services/: crypto.ts  session.ts
client/rust/: Cargo.toml
client/rust/src/: main.rs
identity-service-node/: .env.example  .gitignore  README.md  negative-tests.js  negative-tests.ts  package.json  positive-tests.ts  tsconfig.json
identity-service-node/migrations/: 20260128_create_sessions_table.sql
identity-service-node/src/: server.ts
identity-service-node/src/config/: index.ts  types.ts
identity-service-node/src/constants/: index.ts
identity-service-node/src/controllers/: health.controller.ts  session.controller.ts
identity-service-node/src/jobs/: session-cleanup.job.ts
identity-service-node/src/repositories/: index.ts
identity-service-node/src/repositories/implementations/: base.repository.impl.ts  index.ts  session.repository.impl.ts
identity-service-node/src/repositories/interfaces/: base.repository.ts  index.ts  session.repository.ts
identity-service-node/src/routes/: index.ts
identity-service-node/src/services/: cache.service.ts  database.service.ts  request-validation.service.ts  session-store.service.ts  session.service.ts
identity-service-node/src/types/: index.ts  session.types.ts
identity-service-node/src/utils/: crypto-helpers.ts  logger.ts  lru-cache.ts
server/: bench-init.lua  package-lock.json  package.json
server-dotnet/: Program.cs  SessionCryptoServer.csproj
server-go/: go.mod  go.sum  main.go
server-rust/: Cargo.toml
server-rust-native/: Cargo.toml
server-rust-native/src/: main.rs
server-rust-ring/: Cargo.toml
server-rust-ring/src/: main.rs
server-rust/src/: main.rs
server/migrations/scripts/: 001_create_sessions_table.sql
server/src/: crypto-helpers.ts  index.ts  metrics.ts  session-store.ts
