[package]
name = "session-crypto-server"
version = "1.0.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.12", features = ["v4"] }
aws-lc-rs = "1.12"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
zeroize = "1.8"
