[package]
name = "session-crypto-client"
version = "1.0.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.12", features = ["v4"] }
aws-lc-rs = "1.12"
rand = "0.8"
zeroize = "1.8"
lazy_static = "1.5"
